--- a/Html/products.html
+++ b/Html/products.html
@@ -65,7 +65,7 @@
             row += "</td>";
             row += "<td>" + d.Price;
             row += "</td>";
-            row += "<td>" + d.PriceQuantity;
+            row += "<td>" + d.Quantity;
             row += "</td>";
             row += "<td><img src='../images/" + d.Image + "'width = '70px' height='70px'>";
             row += "</td>";
@@ -87,7 +87,7 @@
             id: pi,
             Name: pn,
             Price: pp,
-            PriceQuantity: pq,
+            Quantity: pq,
             Image: img
         }
 
@@ -117,7 +117,7 @@
                 document.getElementById("id").value = d.id;
                 document.getElementById("productName").value = d.Name;
                 document.getElementById("productPrice").value = d.Price;
-                document.getElementById("productQuantity").value = d.PriceQuantity;
+                document.getElementById("productQuantity").value = d.Quantity;
                  document.getElementById("img1").value = d.Image;
             }
         })
@@ -137,7 +137,7 @@
             if (d.id == upi) {
                 d.Name = upn;
                 d.Price = upp;
-                d.PriceQuantity = upq;
+                d.Quantity = upq;
                 d.Image = img;
             }
 
